Revision history for Perl extension Prancer

0.01 Mon Mar 31 04:27:36 UTC 2014
	- Initial release.

0.03 Wed Apr  2 03:02:51 UTC 2014
	- Screwed up 0.02, releasing again compatible with CPAN

0.04 Sun Apr  6 05:52:15 UTC 2014
	- Fixing warnings when paths do not exist
	- Allow default values on session/config gets
	- Fixing bug in getting all parameters

0.05 Mon Apr 21 06:12:13 UTC 2014
	- make Plack::Middleware::Session a required module to make tests work, among other things
	- fix bug that would prevent cookies from being sent with responses
	- adding headers and cookies to the template
	- allow setting PLUGIN_BASE on TT plugin
	- fix TT plugin extension
	- doc updates

0.06
	- removing template code